examples/test/testpolicy12727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12727
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key20: value47
      key48: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value45
      podSelector:
        matchLabels:
          key38: value36
          key28: value24
